incubator/satisfactory/0.0.5/README.md
# satisfactory

![Version: 0.0.5](https://img.shields.io/badge/Version-0.0.5-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 1.2.3](https://img.shields.io/badge/AppVersion-1.2.3-informational?style=flat-square)

Satisfactory App for TrueNAS SCALE

**Homepage:** <https://github.com/Dyllan2000alfa/apps/blob/satisfactory/charts/incubator/satisfactory>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/wolveix/satisfactory-server>
* <https://hub.docker.com/r/wolveix/satisfactory-server>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org | common | 8.9.25 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.AUTOPAUSE | bool | `true` |  |
| env.AUTOSAVEINTERVAL | int | `300` |  |
| env.AUTOSAVENUM | int | `3` |  |
| env.AUTOSAVEONDISCONNECT | bool | `true` |  |
| env.CRASHREPORT | bool | `true` |  |
| env.DEBUG | bool | `false` |  |
| env.DISABLESEASONALEVENTS | bool | `false` |  |
| env.MAXPLAYERS | int | `4` |  |
| env.PGID | int | `568` |  |
| env.PUID | int | `568` |  |
| env.SERVERBEACONPORT | int | `15000` |  |
| env.SERVERGAMEPORT | int | `7777` |  |
| env.SERVERIP | string | `"0.0.0.0"` |  |
| env.SERVERQUERYPORT | int | `15777` |  |
| env.SKIPUPDATE | bool | `false` |  |
| env.STEAMBETA | bool | `false` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"wolveix/satisfactory-server"` |  |
| image.tag | string | `"v1.2.3@sha256:5860dbac9fc8cb2e6010b69e60e633d06e25e2a0152f8858a8f23acda7c3c719"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| probes.liveness | object | See below | Liveness probe configuration |
| probes.readiness | object | See below | Redainess probe configuration |
| probes.startup | object | See below | Startup probe configuration |
| service.beacon.enabled | bool | `true` |  |
| service.beacon.ports.beacon.enabled | bool | `true` |  |
| service.beacon.ports.beacon.port | int | `15000` |  |
| service.beacon.ports.beacon.protocol | string | `"UDP"` |  |
| service.beacon.ports.beacon.targetPort | int | `15000` |  |
| service.main.ports.main.port | int | `7777` |  |
| service.main.ports.main.protocol | string | `"UDP"` |  |
| service.main.ports.main.targetPort | int | `7777` |  |
| service.query.enabled | bool | `true` |  |
| service.query.ports.query.enabled | bool | `true` |  |
| service.query.ports.query.port | int | `15777` |  |
| service.query.ports.query.protocol | string | `"UDP"` |  |
| service.query.ports.query.targetPort | int | `15777` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
